--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,12 @@
   <meta charset="utf-8">
   <title>ABICCAWEB</title>
   <base href="./">
+
+  <!-- <script>
+    var baseHref = window.location.hostname === 'localhost' ? '/' : '/PORTARIA-WEB/';
+    document.write('<base href="' + baseHref + '">');
+  </script> -->
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="icone.png">
   <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet"> -->
